[package]
name = "reboot-arch-btw"
version = "0.7.0"
repository = "https://github.com/rnestler/reboot-arch-btw"
license = "GPL-3.0-only"
authors = [
  "Raphael Nestler <raphael.nestler@gmail.com>",
  "Stefan Schindler <stefan@estada.ch>",
  "Danilo Bargen <mail@dbrgn.ch>",
]
description = "Check if you need to reboot due to an updated kernel. (I use Arch btw!)"
readme = "README.md"
keywords = ["i-use-arch-btw", "arch", "linux", "kernel"]
categories = ["command-line-utilities"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
]
edition = "2021"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
alpm = "*"
clap = { version = "4.5.1", features = ["help", "usage", "error-context", "std", "derive"], default-features = false }
notify-rust = "4.10"
utmp-rs = "0.3.0"
time = "0.3.32"
log = "0.4.21"
env_logger = "0.11.2"
anyhow = "1.0.80"
