[package]
name = "reboot-arch-btw"
version = "0.9.0"
repository = "https://github.com/rnestler/reboot-arch-btw"
license = "GPL-3.0-only"
authors = [
  "Raphael Nestler <raphael.nestler@gmail.com>",
  "Stefan Schindler <stefan@estada.ch>",
  "Danilo Bargen <mail@dbrgn.ch>",
]
description = "Check if you need to reboot due to an updated kernel. (I use Arch btw!)"
readme = "README.md"
keywords = ["i-use-arch-btw", "arch", "linux", "kernel"]
categories = ["command-line-utilities"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
]
edition = "2024"

[dependencies]
alpm = "5.0.0"
clap = { version = "4.5.53", features = ["help", "usage", "error-context", "std", "derive"], default-features = false }
notify-rust = { version = "4.11", features = ["d"], default-features = false }
utmp-rs = "0.4.0"
time = "0.3.44"
log = "0.4.27"
env_logger = "0.11.6"
anyhow = "1.0.100"
